[tool.poetry]
name = "QuizWhizAI"
version = "0.1.0"
description = "Generate endless quizzes with ChatGPT API on Streamlit."
authors = ["Roy, Debakar <debakar.roy@intel.com>"]

[tool.poetry.dependencies]
python = "~3.8"
openai = "^0.27.0"
streamlit = { version = "^1.19.0", python = ">=3.7, !=3.9.7" }

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
